# property

./: .replit  README.md  app.py  app1.py  createdb.py  invoices.db  populatedb.py  pyproject.toml
templates/: create_invoice.html  home.html  index.html  invoice_detail.html
